--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Prakaska",
+  "name": "Darshan_jk",
   "description": "Telegram's sassiest group manager. Modular Telegram group management bot!",
   "keywords": [
     "telegram",
